--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class="stat-item">
                             <i class="fas fa-heart"></i>
-                            <span>Preserving tradition since 2024</span>
+                            <span>Preserving tradition</span>
                         </div>
                     </div>
                 </div>
